# TicTacToe_Solver

./: CMakeLists.txt  README.md  counting_tictac_cm.cpp  latest_stable.cpp
.cache/clangd/index/: counting_tictac_base.hpp.A7823393C6619F69.idx  main.cpp.F0DC96A87B1D1F4B.idx  minmax_solver.hpp.863D8437F15E0F99.idx  transpose_table.hpp.27AC267937124948.idx  utility.hpp.7A839D86D4B3F35A.idx
includes/: counting_tictac_base.hpp  minmax_solver.hpp  transpose_table.hpp  utility.hpp
src/: main.cpp
